# withoutbg-python

./: .gitignore  .pre-commit-config.yaml  .releaserc.json  CHANGELOG.md  CONTRIBUTING.md  LICENSE  LICENSE-DINOv3  Makefile  NOTICE  README.md  SECURITY.md  THIRD_PARTY_LICENSES.md  package-lock.json  package.json  pyproject.toml
.github/: COMMIT_CONVENTION.md  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
docs/: MIGRATION.md  RELEASE.md
examples/: batch_processing.py  remove_background_api.py  remove_background_local.py
src/withoutbg/: __init__.py  __version__.py  api.py  cli.py  core.py  exceptions.py  models.py
tests/: conftest.py  test_api.py  test_cli.py  test_cli_e2e.py  test_core.py  test_models.py
tests/fixtures/: __init__.py  mock_responses.py
tests/fixtures/expected_outputs/: .gitkeep
tests/fixtures/images/: .gitkeep
tests/fixtures/mock_responses/: .gitkeep  api_error_401.json  api_error_402.json  api_error_429.json  api_success.json  api_usage_response.json
tests/integration/: test_real_image_processing.py
tests/performance/: test_batch_performance.py  test_benchmarks.py  test_memory_usage.py
